--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.oma">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OMA">
+        android:theme="@style/Theme.OMA"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".NewConsultationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PacientHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserInfoLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterUser"
+            android:exported="false" />
+        <activity
+            android:name=".PasswordRecover"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
